feat: Integrate PyQt5 for GUI and enhance audio device management

--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,10 @@ name = "pypi"
 pyaudio = "*"
 sounddevice = "*"
 keyboard = "*"
-customtkinter = "*"
 pycaw = "*"
 pywin32 = "*"
 comtypes = "*"
+pyqt5 = "*"
 
 [dev-packages]
 
